--- a/indice-icaria.html
+++ b/indice-icaria.html
@@ -13,8 +13,6 @@
         <link rel="stylesheet" type="text/css" media="all" href="colorschemes/colorscheme1/colorscheme.css">
         <link rel="stylesheet" type="text/css" media="all" href="style.css">
         <link rel="stylesheet" type="text/css" media="all" href="style9.css">
-        <script type="text/javascript" src="live_tinc.js">
-</script>
         <script type="text/javascript">
 var
         _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-11726448-1']); _gaq.push(['_setDomainName', '.arxiuhistoricpoblenou.es']);
@@ -98,7 +96,7 @@ var
                                         <li>Icària 1, 1996
                                         </li>
                                         <li>
-                                            <a href="#icaria2">Icària 2, 1997</a>
+                                            Icària 2, 1997
                                         </li>
                                         <li>
                                             <a href="#icaria3">Icària 3, 1998</a>
@@ -632,4 +630,5 @@ var
         </div><!-- wfxbuild / 1.0 / layout2-6 / 2011-02-20 18:04:12
 CET-->
     </body>
+        <script type="text/javascript" src="arxiu-toc.js"></script>
 </html>
